# ELEMENTS

./: .gitignore
Elements/: elements.cpp  elements.h  matar.h
Elements_examples/Laplacian/: CMakeLists.txt  cuda_cmake_command.txt  mycheck.sh
Elements_examples/Laplacian/cmake/Modules/: TargetDistclean.cmake
Elements_examples/Laplacian/driver/: CMakeLists.txt  Pseudo_Laplacian.cpp  Pseudo_Laplacian_Kokkos.cpp
Elements_examples/Laplacian/elements/: CMakeLists.txt  elements.cpp  elements.h  matar.h  old_elements.cpp  old_elements.h
Elements_examples/Laplacian/include/: header.h  state.h
Elements_examples/Laplacian/ktest/: lap.silver
Elements_examples/Laplacian/src/: CMakeLists.txt  input.cpp
Elements_examples/elements/: CMakeLists.txt  elements.cpp  elements.h
Matar/Kokkify/MatarTest/: main.cpp  main_benchmark.cpp  matar.h
elements/: lagrange_polynomials.cpp
examples/average/test/: average.cpp
include/element_types/: elements.h  elements2D.h  elements3D.h  elements4D.h  gauss_jacobi_quadrature.h  jacobi_polynomials.h  quadrature.h
src/element_types/: CMakeLists.txt  elements.cpp  elements2D.cpp  elements3D.cpp  elements4D.cpp  gauss_jacobi_quadrature.cpp
tests/: test_lagrange_element.cpp  test_lagrange_polynomials.cpp
